# SoftwareSupplyChainSecurity-hw1

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  bandit-final.txt  bandit-initial.txt  checkpoint.json  main.py  merkle_proof.py  my_checkpoint.json  mypy.final.txt  part3-writeup.txt  personal.txt  pylint.final.txt  pylint.initial.txt  pyproject.toml  ruff.initial.txt  safe_file.txt  test_safe.txt  test_secret.txt  util.py
.github/: CODEOWNERS
